# git-typstdiff

./: LICENSE  README.md  diff.typ  pyproject.toml  script.py  test.typ
src/git_typstdiff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
